\name{NEWS}
\title{NEWS file for the gCMAP package}

\section{Changes in version 1.19.4}{
\itemize{
\item{CHANGE: }{As the bigmemory package is not available for Windows,
only unix_type OS is supported.}
}
}

\section{Changes in version 1.19.1}{
\itemize{
\item{BUGFIX: }{Updated NAMESPACE file to conform with R CMD check.}
\item{BUGFIX: }{reactome2cmap function is available again.}
\item{NEW: }{Added citation information.}
}
}

\section{Changes in version 1.17.3}{
\itemize{
\item{BUGFIX: }{Simpified the mergeCMAPs function.}
\item{BUGFIX: }{Added additional imports to NAMESPACE, as recommended by R CMD check.}
}
}

\section{Changes in version 1.17.2}{
\itemize{
\item{BUGFIX: }{Added import of the Matrix package to NAMESPACE file.}
}
}

\section{Changes in version 1.17.0}{
\itemize{
\item{BUGFIX: }{Added camera's newly introduced inter.gene.cor parameter in camera_score-methods.}
}
}

\section{Changes in version 1.11.3}{
\itemize{
\item{BUGFIX: }{The wiki2cmap function now excludes empty files downloaded from wikipathways from parsing.}
\item{BUGFIX: }{The go2cmap function is now exported.}
\item{BUGFIX: }{The reactom2cmap function is currently defunct, because the reactome.db package is broken.}
}
}

\section{Changes in version 1.11.2}{
  \itemize{
    \item{CHANGE: }{Fixed typo in mroast_score method.}
  }
}


\section{Changes in version 1.11.1}{
  \itemize{
    \item{BUGFIX: }{Fixed the \code{romer_score method} to accomodate the change in argument order in limma's \code{romer} function.}
  }
}

\section{Changes in version 1.11.0}{
  \itemize{
    \item{CHANGE: }{Version bump for BioC update.}
  }
}

\section{Changes in version 1.10.0}{
  \itemize{
    \item{CHANGE: }{Version bump for BioC update.}
  }
}

\section{Changes in version 1.9.2}{
  \itemize{
    \item{BUGFIX: }{Updated geneIndex method to accept both symbols2indices
      and id2indices functions from limma, depending on the limma version.}
  }
}

\section{Changes in version 1.8.1}{
  \itemize{